--- a/src/components/GradientGenerator/GradientPreview/GradientPreview.scss
+++ b/src/components/GradientGenerator/GradientPreview/GradientPreview.scss
@@ -36,20 +36,29 @@
 
 .gradient-preview-pallet {
   @include clickable-element;
+  @include flex-center;
   position: relative;
-  width: 44px;
-  height: 44px;
-  border: 3px solid $white;
+  width: 48px;
+  height: 48px;
+  background: $white;
+  border: 2px solid transparent;
   border-radius: 50%;
 
   &.active {
-    outline: 2px solid $border-color;
+    border: 2px solid $border-color;
   }
 
   &:hover {
     .gradient-preview-pallet__delete-btn {
       opacity: 1;
     }
+  }
+
+  &__inner {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid $border-color;
   }
 
   &__delete-btn {
