--- a/src/components/GradientGenerator/GradientRangeSettings/MultiThumbSlider/MultiThumbSlider.scss
+++ b/src/components/GradientGenerator/GradientRangeSettings/MultiThumbSlider/MultiThumbSlider.scss
@@ -31,7 +31,7 @@
 
     &.active {
       &::-webkit-slider-thumb {
-        outline: 2px solid $border-color;
+        box-shadow: $shadow, 0 0 0 2px $border-color;
       }
 
       &::-moz-range-thumb {
@@ -49,10 +49,9 @@
       background-color: var(--gradient-thumb-color, black);
       border: 3px solid $white;
       border-radius: 50%;
-      box-shadow: $shadow;
 
       &:hover {
-        outline: 2px solid $border-color;
+        box-shadow: $shadow, 0 0 0 2px $border-color;
       }
     }
 
